blueprints/construction-trades/salesforce/force-app/main/default/objects/Estimate__c/Estimate__c.object-meta.xml
<CustomObject>
    <description>One priced revision of a bid or quote. A deal can have several, so price history and margin are kept without overwriting the deal amount.</description>
    <label>Estimate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>