blueprints/construction-trades/salesforce/force-app/main/default/objects/Estimate__c/fields/Estimator__c.field-meta.xml
<CustomField>
    <fullName>Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member who priced it.</description>
    <label>Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Estimates Estimator</relationshipLabel>
    <relationshipName>Estimate_Estimator</relationshipName>
    <type>Lookup</type>
</CustomField>