blueprints/construction-trades/salesforce/force-app/main/default/objects/Estimate__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Margin built into this revision.</description>
    <label>Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>