blueprints/construction-trades/salesforce/force-app/main/default/objects/Estimate__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Total price excluding VAT for this revision.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>