blueprints/construction-trades/salesforce/force-app/main/default/objects/Estimate__c/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>Revision number, starting at 1. A new price is a new estimate, never an edit.</description>
    <label>Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>