blueprints/construction-trades/salesforce/force-app/main/default/objects/Estimate__c/fields/Valid_until__c.field-meta.xml
<CustomField>
    <fullName>Valid_until__c</fullName>
    <description>The last day the price can be accepted.</description>
    <label>Valid until</label>
    <type>Date</type>
</CustomField>